# humalion

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PERSONA.md  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
examples/: synthetic_dhuman.ipynb
src/humalion/: __init__.py  __main__.py
src/humalion/engine/: digital_human.py  errors.py  face_detection_model.py  face_embedding.py  face_embedding_model.py  face_swapper.py  generative_model.py  image_generative_model.py  img_to_persona_model.py  persona.py  user_photo.py  video_generative_model.py
src/humalion/media_storages/: local_files.py  s3.py
src/humalion/models/: chatgpt_img_to_persona.py  flux_replica.py  luma.py  random_local_photo.py  sd_core.py  sdxl.py
src/humalion/models/instant_id/: face_analysis.py  face_emb_model.py  instant_id.py  pipeline_stable_diffusion_xl_instantid.py  utils.py
src/humalion/models/instant_id/poses/: men.npy  women.npy
src/humalion/services/: luma.py  mixins.py  replica.py  sdxl.py  stability_ai.py
src/humalion/utils/: enum.py  github.py  mixins.py  path.py
src/pygma/: __init__.py  __main__.py
src/pygmalion/: __init__.py  __main__.py
src/pygmalion/engine/: DHuman.py  FaceEmbedding.py  FaceEmbeddingModel.py  Persona.py  digital_human.py  face_detection_model.py  face_embedding.py  generative_model.py  persona.py
src/pygmalion/media_storages/: s3.py
src/pygmalion/models/: random_local_photo.py
src/pygmalion/models/instant_id/: instant_id.py
src/pygmalion/services/: sdxl.py
tests/: __init__.py  test_main.py
