[tool.poetry]
name = "humalion"
version = "0.0.0"
description = "Humalion"
authors = ["Dataism Lab <timoshenkois.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dataism-lab/Humalion"
repository = "https://github.com/dataism-lab/Humalion"
documentation = "https://humalion.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/dataism-lab/humalion/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
pydantic = "^2.8.2"
aioboto3 = "^13.1.1"
loguru = "^0.7.2"
types-aioboto3 = "^13.1.1"
tqdm = "^4.66.4"
faker = "^27.0.0"
huggingface-hub = "^0.24.5"
joblib = "^1.4.2"
insightface = "^0.7.3"
pygithub = "^2.3.0"
opencv-python = "^4.10.0.84"
transformers = "^4.44.2"
accelerate = "^0.33.0"
diffusers = "^0.30.2"
onnxruntime = "^1.19.0"
jupyter = "^1.1.1"
replicate = "^0.32.1"
notebook = "^7.2.2"
instructor = "^1.4.2"
backoff = "^2.2.1"
lumaai = "^1.0.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
humalion = "humalion.__main__:main"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["humalion", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
